--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,6 @@ android.useAndroidX=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
 
-# dependencies
+# custom dependencies
 exposed_version=0.48.0
+sqlite_driver_version=3.45.1.0
